--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>2</title>
-<script>
-(function( win ){
-var location = win.location;
-
-// RegExp from http://stackoverflow.com/questions/901115/get-query-string-values-in-javascript
-function pageName() {
-  var value = new RegExp( '[\\?&]' + 'page' + '=([^&#]*)' ).exec( location.href );
-  return  ( !value ) ? 0 : value[ 1 ] || 0;
-}
-
-// Fall back to old edit mode on browsers that do not support typed arrays.
-if ( typeof Int32Array == 'undefined' ) {
-  win.location = location.protocol + '//' + location.host + '/edit/' + pageName();
-}
-})(window);
-</script>
-<!-- For production
-<link rel='stylesheet' type='text/css' href='../css/template.css' />
--->
+<title>o2 c0</title>
 <link rel='stylesheet' type='text/css' href='css/gollum/template.css' />
 <link rel='stylesheet' type='text/css' href='css/custom.css' />
 </head>
@@ -53,7 +34,7 @@ var require = {
 <script src='js/requirejs/require.js'></script>
 <script src='js/jquery/jquery-1.7.2.min.js'></script>
 <script src='js/debounce/jquery.ba-throttle-debounce.js'></script>
-<script src='js/sundown/sundown_o2.js'></script>
+<script src='js/sundown/sundown_o2_c0.js'></script>
 <script src='js/livepreview/livepreview.js'></script>
 <script>(function(d,j){
 j = d.createElement('script');
