--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@ var require = {
 <script src='js/requirejs/require.js'></script>
 <script src='js/jquery/jquery-1.7.2.min.js'></script>
 <script src='js/debounce/jquery.ba-throttle-debounce.js'></script>
-<script src='js/sundown/sundown_o2_c0.js'></script>
+<script src='js/sundown/test.js'></script>
 <script src='js/livepreview/livepreview.js'></script>
 </body>
 </html>
