--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>o2 c0</title>
+<title>Live Preview o2</title>
 <link rel='stylesheet' type='text/css' href='css/gollum/template.css' />
 <link rel='stylesheet' type='text/css' href='css/custom.css' />
 </head>
