--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@ var require = {
 <script src='js/jquery-1.7.2.min.js'></script>
 <script src='js/jquery.ba-throttle-debounce.min.js'></script>
 <script src='js/sundown.js'></script>
+<script src='js/md_sundown.js'></script>
 <script src='js/livepreview.js'></script>
 <script>(function(d,j){
 j = d.createElement('script');
