--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,7 @@ var require = {
 <script src='js/jquery-1.7.2.min.js'></script>
 <script src='js/jquery.ba-throttle-debounce.min.js'></script>
 <script src='js/sundown.js'></script>
-<script>
-require( ['js/md_sundown'], function() {
-  window.md_to_html = require('js/md_sundown').md_to_html;
-});
-</script>
+<script src='js/md_sundown.js'></script>
 <script src='js/livepreview.js'></script>
 <script>(function(d,j){
 j = d.createElement('script');
