--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Live Preview o2</title>
+<title>Live Preview</title>
 <script>
 (function( win ){
 var location = win.location;
