Add new production value.

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@ var require = {
 };
 </script>
 <script src='js/requirejs.min.js'></script>
+<!-- For production
+<script src='../javascript/jquery-1.7.2.min.js'></script>
+-->
 <script src='js/jquery-1.7.2.min.js'></script>
 <script src='js/jquery.ba-throttle-debounce.min.js'></script>
 <script src='js/sundown.js'></script>
