--- a/public/index_deep.html
+++ b/public/index_deep.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Live Preview (markdowndeep)</title>
+<title>markdowndeep Live Preview</title>
 <!-- For production
 <link rel='stylesheet' type='text/css' href='../css/template.css' />
 -->
