Typeset MathJax using QuickDiff.
Live preview is unusable with lots of math because all equations are typeset on every change.
QuickDiff enables typesetting only the new content.

- http://blog.chris-spencer.co.uk/quickdiff-fast-dom-updates-for-live-previews
- http://blog.chris-spencer.co.uk/quick-tree-differences-for-live-previews

Update notes.

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,11 @@
 
 <body>
 <div id='editor'></div>
-<div id='previewframe'><div id='contentframe' class='markdown-body'></div></div>
+<div id='previewframe'>
+  <div id='contentframe' class='markdown-body'>
+    <div></div> <!-- content div -->
+  </div>
+</div>
 <!-- tool panel from notepage.es. save & savecomment icons from Retina Display Icon Set. -->  
 <div id='toolpanel' class='toolpanel edit' style='width: 500px; right: 0px; visibility: hidden;'>
   <a id='save' class='edit'><img src='images/save_24.png' alt='Save' title='Save'></a>
@@ -41,6 +45,7 @@ var require = {
 <script src='js/jquery.ba-throttle-debounce.min.js'></script>
 <script src='js/sundown.js'></script>
 <script src='js/md_sundown.js'></script>
+<script src='js/quickdiff.js'></script>
 <script src='js/livepreview.js'></script>
 <script>(function(d,j){
 j = d.createElement('script');
