--- a/public/index_deep.html
+++ b/public/index_deep.html
@@ -11,8 +11,11 @@
 
 <body>
 <div id='editor'></div>
-
-<div id='previewframe'><div id='contentframe' class='markdown-body'></div></div>
+<div id='previewframe'>
+  <div id='contentframe' class='markdown-body'>
+    <div></div> <!-- content div -->
+  </div>
+</div>
 <!-- tool panel from notepage.es. save & savecomment icons from Retina Display Icon Set. -->  
 <div id='toolpanel' class='toolpanel edit' style='width: 500px; right: 0px; visibility: hidden;'>
   <a id='save' class='edit'><img src='images/save_24.png' alt='Save' title='Save'></a>
@@ -35,6 +38,9 @@ var require = {
 };
 </script>
 <script src='js/requirejs.min.js'></script>
+<!-- For production
+<script src='../javascript/jquery-1.7.2.min.js'></script>
+-->
 <script src='js/jquery-1.7.2.min.js'></script>
 <script src='js/jquery.ba-throttle-debounce.min.js'></script>
 <script src='js/MarkdownDeep.js'></script>
